# dotfiles

./: .gitignore
macos/: fd.sh
macos/core/: brew-install.sh  pull-karabiner-config.sh  pull-linearmouse-config.sh  stow.sh
macos/core/stowed/: .simplebarrc  .zshrc-dotfiles
universal/: bottom.sh  broot.sh  delta.sh  dust.sh  mprocs.sh  ripgrep.sh  sd.sh  tokei.sh
universal/atuin/: install.sh
universal/bat/: install.sh
universal/claude/: .settings-review-ignore.json  README.md  hooks.json  install-caveman.sh  install-ponytail.sh  install-rtk.sh  review-settings.ts  settings-partial.json  setup-hooks.ts  setup-settings.ts  stow.sh
universal/claude/skill-evals/: .gitignore  README.md  pyproject.toml  run_behavior_eval.py
universal/claude/skill-evals/evals/: commit-conventions.json  enrich-todos.json  jira-preferences.json  pr-comments.json  pr-conventions.json  session-handoff.json  todos.json  verify-branch-commits.json
universal/eza/: install.sh
universal/git/: utilities.sh
universal/mise/: install.sh
universal/mise/stowed/: .default-npm-packages
universal/neovim/: commit-lazy-lock.sh  install.sh
universal/neovim/nvimrcs/: edb-upm-ui.lua
universal/rust/: install.sh
universal/starship/: install.sh
universal/tmux/stowed/: .tmux.conf
universal/worktrees/: .oxlintrc.json  README.md  install.sh  knip.json  package-lock.json  package.json  tsconfig.json
universal/worktrees/completions/: _worktrees  worktrees.bash
universal/worktrees/docs/: effect-exploration.md  (+1 more)
universal/yazi/: install.sh
universal/zoxide/: install.sh
(+108 files in other folders)
